# VKGraphics

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  README_.md  readme.md
Assets/Models/GLTF/Primitives/: cube.gltf  plane.gltf  triangle.gltf
Assets/Models/GLTF/Spot/: spot.gltf
Assets/Models/GLTF/Wineglass/: wineglass.gltf
Assets/Models/SDCC/: README.txt
Assets/Models/dae/Primitives/: plane.dae  torus.dae
Assets/Models/dae/Spot/: spot_triangulated.dae
Assets/Models/dae/Teapot/: teapot.dae
Assets/SPIR-V/Basic/: Basic.vs.spv
Assets/SPIR-V/Primitives/: Triangle.fs.spv  Triangle.vs.spv
Assets/Shaders/Basic/: Basic.fs.glsl  Basic.vs.glsl
Assets/Shaders/Bezier/: Bezier.tcs.glsl  Bezier.tes.glsl  Solid.vs.glsl
Assets/Shaders/Deferred/: Deferred.fs.glsl
Assets/Shaders/DeferredPBR/: DeferredPBR.fs.glsl  DeferredPBR.vs.glsl
Assets/Shaders/Diffuse/: Diffuse.fs.glsl  Diffuse.vs.glsl
Assets/Shaders/GLSL/Basics/: Basic.fs.glsl  Basic.vs.glsl  UniformBuffer.fs.glsl  UniformBuffer.vs.glsl
Assets/Shaders/GLSL/Deferred/: DeferredOffscreen.fs.glsl  DeferredOffscreen.vs.glsl  DeferredVisualize.fs.glsl  DeferredVisualize.vs.glsl
Assets/Shaders/GLSL/Experimental/: GBuffer.vs.glsl  Lighting.fs.glsl  SSAO.fs.glsl
Assets/Shaders/GLSL/PBR/: PBR.fs.glsl  PBR.vs.glsl
Assets/Shaders/GLSL/SPIR-V/Basics/: Basic.fs.spv  Basic.vs.spv  UniformBuffer.vs.spv
Assets/Shaders/GLSL/SPIR-V/Deferred/: DeferredOffscreen.fs.spv  DeferredOffscreen.vs.spv  DeferredVisualize.fs.spv  (+1 more)
Assets/Shaders/GLSL/SSAO/: Blur.fs.glsl  GBuffer.fs.glsl  GBuffer.vs.glsl  Lighting.fs.glsl  SSAO.fs.glsl
Assets/Shaders/GLSL/Texture/: Texture.fs.glsl  Texture.vs.glsl
Assets/Shaders/GLSL/UI/: UIOverlay.fs.glsl  UIOverlay.vs.glsl
Assets/Shaders/HLSL/Basics/: Basic.fs.hlsl  Basic.vs.hlsl  UniformBuffer.vs.hlsl
Assets/Shaders/HLSL/Deferred/: DeferredOffscreen.fs.hlsl  DeferredOffscreen.vs.hlsl  DeferredVIsualize.vs.hlsl  DeferredVisualize.fs.hlsl
Assets/Shaders/HLSL/PBR/: PBR.fs.hlsl  PBR.vs.hlsl
Assets/Shaders/HLSL/Texture/: Texture.fs.hlsl  Texture.vs.hlsl
Assets/Shaders/HLSL/UI/: UIOverlay.fs.hlsl  UIOverlay.vs.hlsl
Assets/Shaders/MSAA/: Centroid.fs.glsl  Centroid.vs.glsl  NoCentroid.fs.glsl  NoCentroid.vs.glsl
Assets/Shaders/PBR/: PBR.fs.glsl  PBR.vs.glsl
Assets/Shaders/Particles/: Particles.cs.glsl  Particles.fs.glsl  Particles.vs.glsl
Assets/Shaders/Phong/: Phong.vs.glsl
Assets/Shaders/Primitives/: Triangle.fs.glsl  Triangle.vs.glsl
Assets/Shaders/SSAO/: Blur.fs.glsl  GBuffer.fs.glsl  Lighting.fs.glsl  SSAO.fs.glsl  SSAO.vs.glsl
Assets/Shaders/ShadowMap/: RecordDepth.fs.glsl  RecordDepth.vs.glsl
Assets/Shaders/ShadowMap/CSM/: CSM.fs.glsl  CSM.vs.glsl
Assets/Shaders/ShadowMap/PCF/: PCF.fs.glsl
Assets/Shaders/ShadowMap/Simple/: ShadowMap.fs.glsl  ShadowMap.vs.glsl
Assets/Shaders/Solid/: Solid.fs.glsl
Assets/Shaders/Subroutine/: Subroutine.fs.glsl  Subroutine.vs.glsl
Assets/Shaders/Texture/: Texture.fs.glsl
Assets/Shaders/UI/: Text.fs.glsl  Text.vs.glsl
Assets/Textures/dds/Brick/: ruin_wall_02.dds
Assets/Textures/dds/Wood/: hp_wood.dds
Assets/Textures/ktx/Brick/: ruin_wall_03_height.ktx  ruin_wall_03_norm.ktx  ruin_wall_03_rough.ktx
Assets/Textures/ktx/Ogre/: ao_angry.ktx  ao_blink.ktx  ao_ears.ktx  ao_rest.ktx  ao_smile.ktx  bump.ktx  diffuse.ktx  gi.ktx  gi_conformal.ktx  normalmap.ktx
Assets/Textures/ktx/SDCC/: baked_building.ktx  baked_ground.ktx  shadowmap_building.ktx  shadowmap_ground.ktx
Assets/Textures/ktx/Spot/: spot_texture.ktx
Assets/Textures/ktx/Wood/: hp_wood.ktx  light+wood-256x256.ktx
Assets/Textures/png/Ogre/: README.txt
Common/: Common.h  JSON.h  Json.h
Common/Geometry/: AABB.h  BSphere.h
Common/Math/: UniformDistribution.h
Common/Mesh/: TriangleMesh.cc  TriangleMesh.h
Common/Scene/: Scene.h  SceneLoop.h
Common/Utils/: Singleton.h
Common/View/: Camera.cc  Camera.h  Frustum.cc  Frustum.h
Configs/: SceneDeferred.json  SceneHelloTriangle.json  ScenePBR.json  ScenePBRBasic.json  SceneProtoSSAO.json  SceneSSAO.json  SceneTextureMapping.json
Core/: App.h  Window.h
Core/HID/: KeyInput.h
Core/VK/: Buffer.cc  Buffer.h  Common.h  Debug.cc  Debug.h  Device.cc  Device.h  Framebuffer.cc  Framebuffer.h  Gui.cc  Gui.h  ImageView.cc  ImageView.h  Initializer.h  Instance.cc  Instance.h  Model.cc  Model.h  Shader.cc  Shader.h  Swapchain.cc  Swapchain.h  Texture.cc  Texture.h  Utils.cc  Utils.h  VkApp.cc  VkApp.h  VkBase.cc  VkBase.h
Core/VK/Buffer/: Buffer.cc  Buffer.h  BufferObject.cc  BufferObject.h  Command.cc  Command.h  DepthStencil.cc  DepthStencil.h  Memory.cc  Memory.h  Uniforms.h  VertexBuffer.cc  VertexBuffer.h
Core/VK/Image/: Image.cc  Image.h  ImageView.cc  ImageView.h  Texture.cc  Texture.h
Core/VK/Pipeline/: DescriptorSets.cc  DescriptorSets.h  Descriptors.cc  Descriptors.h  Pipelines.cc  Pipelines.h  Shader.cc  Shader.h  Uniforms.h
Core/VK/Primitive/: Vertex.cc  Vertex.h
Core/VK/Sync/: Fences.h  Semaphores.h  SyncObjects.cc  SyncObjects.h
Lib/assimp/win/debug/: assimp-vc142-mtd.exp  assimp-vc142-mtd.lib
Lib/assimp/win/release/: assimp-vc142-mt.exp
Lib/freetype/debug/: freetype.lib  libfreetype.dylib
Lib/freetype/release/: freetype.lib  libfreetype.6.dylib  libfreetype.dylib
Lib/glfw/: libglfw.dylib
Projects/Deferred/: Deferred.cc  Deferred.h  Main.cc
Projects/DepthTesting/: Config.json  DepthTesting.cc  DepthTesting.h  Main.cc
Projects/HelloTriangle/: Config.json  HelloTriangle.cc  HelloTriangle.h  Main.cc
Projects/ListsLayers/: Main.cc
Projects/LoadValidationLayers/: Main.cc
Projects/MinimalVK/: Main.cc
Projects/PBR/: Main.cc  PBR.cc  PBR.h
Projects/PBRBasic/: Config.json  Main.cc  PBRBasic.cc  PBRBasic.h
Projects/ProtoSSAO/: Main.cc  ProtoSSAO.cc  ProtoSSAO.h
Projects/SSAO/: Main.cc  SSAO.cc  SSAO.h
Projects/TextureMapping/: Config.json  Main.cc  TextureMapping.cc  TextureMapping.h
Projects/UniformBuffers/: Config.json  Main.cc  UniformBuffers.cc  UniformBuffers.h
Scripts/: .flake8  Pipfile  sl2spv.py  spv_conv.py  tex_conv.py
(+56 files in other folders)
